@startuml

class Clinic {
  - name: String
  - patients: List<Patient>
  - doctors: List<Doctor>
  - appointments: List<Appointment>
  + Clinic(String)
  + addPatient(Patient): void
  + addDoctor(Doctor): void
  + scheduleAppointment(Patient, Doctor, String): Appointment
  + findAvailableDoctorBySpecialization(String): Doctor
  + toString(): String
}

class Patient {
  - patientId: String
  - fullName: String
  - birthYear: int
  - hasAppointment: boolean
  + Patient(String, String, int)
  + scheduleAppointment(Doctor): void
  + cancelAppointment(): void
  + hasActiveAppointment(): boolean
  + toString(): String
  + equals(Object): boolean
  + hashCode(): int
}

class Doctor {
  - doctorId: String
  - fullName: String
  - specialization: String
  - available: boolean
  + Doctor(String, String, String)
  + canAcceptPatient(): boolean
  + markBusy(): void
  + markAvailable(): void
  + toString(): String
  + equals(Object): boolean
  + hashCode(): int
}

class Appointment {
  - appointmentId: String
  - patient: Patient
  - doctor: Doctor
  - date: String
  - status: String
  + Appointment(String, Patient, Doctor, String)
  + complete(): void
  + cancel(): void
  + isActive(): boolean
  + toString(): String
  + equals(Object): boolean
  + hashCode(): int
}

Clinic "1" o-- "0..*" Patient : contains (aggregation)
Clinic "1" o-- "0..*" Doctor : contains (aggregation)
Clinic "1" *-- "0..*" Appointment : owns (composition)

Patient "0..1" --> "0..1" Doctor : has active
Appointment --> Patient : belongs to
Appointment --> Doctor : assigned to

@enduml